More file manager CSS stuff

--- a/src/css/apps/user/filemanager.css
+++ b/src/css/apps/user/filemanager.css
@@ -1,17 +1,14 @@
+@import url("./filemanager/sidebar.css");
+@import url("./filemanager/addressbar.css");
+@import url("./filemanager/directoryviewer.css");
+@import url("./filemanager/splash.css");
+@import url("./filemanager/overlays/renameitem.css");
+
 #fileManager > div.body {
   padding: 0;
   display: flex;
   align-items: center;
   height: 100%;
-}
-
-#fileManager > div.body div.sidebar {
-  height: 100%;
-  width: 200px;
-  border-right: var(--win-border);
-  overflow-y: scroll;
-  padding: 10px;
-  padding-right: 2px;
 }
 
 #fileManager > div.body div.container {
@@ -22,420 +19,6 @@
 
 #fileManager > div.body div.main-content {
   height: calc(100% - 40px);
-}
-
-#fileManager > div.body div.sidebar button {
-  width: 100%;
-  height: 30px;
-  text-align: left;
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  padding: 0 7px;
-  margin-bottom: 5px;
-  background-color: transparent;
-}
-
-#fileManager > div.body div.sidebar button > span:not(.lucide) {
-  max-width: calc(100% - 16px - 30px - 20px);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-#fileManager > div.body div.sidebar button.selected {
-  background-color: var(--accent-transparent);
-}
-
-#fileManager > div.body div.sidebar button img {
-  width: 24px;
-  height: 24px;
-}
-
-#fileManager > div.body div.sidebar button span.lucide {
-  font-size: 16px;
-  color: var(--accent-light);
-}
-
-#fileManager > div.body div.sidebar button .circular-progress {
-  margin-left: auto;
-}
-
-#fileManager > div.body div.sidebar button:hover {
-  background-color: var(--button-glass-bg);
-}
-
-#fileManager > div.body div.sidebar button:active {
-  background-color: var(--button-glass-active-bg);
-}
-
-#fileManager > div.body div.sidebar section h1 {
-  opacity: 0.5;
-  padding: 5px 7px;
-}
-
-#fileManager > div.body div.sidebar section + section {
-  margin-top: 10px;
-}
-#fileManager div.address-bar {
-  display: flex;
-  gap: 10px;
-  height: 30px;
-  margin: 5px 15px;
-  margin-bottom: 0;
-  align-items: center;
-  position: relative;
-}
-
-#fileManager div.address-bar div.portion.address {
-  flex-grow: 1;
-  max-width: calc(100% - 243px);
-}
-
-#fileManager div.address-bar div.path {
-  flex-grow: 1;
-  max-width: calc(100% - 35px);
-  background-color: var(--button-bg);
-  border-radius: var(--button-border-rad);
-  /* line-height: 30px; */
-  padding: 3px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-#fileManager div.address-bar button.activated {
-  background-color: var(--accent-light) !important;
-  color: var(--accent-darkest);
-}
-
-#fileManager div.address-bar div.path div.pill {
-  padding: 0 5px;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  background-color: var(--button-glass-bg);
-  height: 24px;
-  border-radius: 5px;
-}
-
-#fileManager div.address-bar div.path div.pill span.lucide {
-  font-size: 16px;
-  color: var(--accent-light);
-}
-
-#fileManager div.address-bar div.path img {
-  height: 16px;
-}
-
-#fileManager div.address-bar.system div.path {
-  background-image: repeating-linear-gradient(
-    -45deg,
-    #0000 0px,
-    #0000 20px,
-    rgba(255, 166, 0, 0.1) 20px,
-    rgba(255, 166, 0, 0.1) 40px,
-    #0000 40px
-  );
-}
-
-/* 
-#fileManager div.address-bar.system div.path {
-  background-color: var(--clr-orange-bg);
-  color: var(--clr-orange-fg);
-} */
-
-#fileManager div.address-bar button {
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  margin: 0;
-  font-size: 16px;
-  min-width: unset;
-}
-
-#fileManager div.address-bar button:not(.suggested) {
-  background-color: var(--button-bg);
-}
-
-#fileManager div.address-bar button.suggested {
-  opacity: 1;
-}
-
-#fileManager div.address-bar div.portion {
-  display: flex;
-  gap: 5px;
-}
-
-#fileManager div.address-bar div.sep {
-  width: 1px;
-  height: 20px;
-  background-color: var(--button-hover-bg);
-}
-
-#fileManager div.directory-viewer button div.segment {
-  text-align: left;
-}
-
-#fileManager div.directory-viewer button div.segment.name {
-  max-width: calc(100% - 24px - 200px - 30px);
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-#fileManager div.directory-viewer button div.segment.icon {
-  width: 24px;
-  height: 24px;
-}
-
-#fileManager div.directory-viewer button div.segment.icon img {
-  width: 24px;
-  height: 24px;
-}
-
-#fileManager div.directory-viewer button div.segment.type {
-  margin-left: auto;
-  width: 80px;
-  min-width: 80px;
-}
-
-#fileManager div.directory-viewer button div.segment.size {
-  width: 90px;
-  min-width: 90px;
-}
-
-#fileManager div.directory-viewer button div.segment.modified {
-  width: 90px;
-  min-width: 90px;
-}
-
-#fileManager div.directory-viewer.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 80px);
-  grid-template-rows: repeat(auto-fit, 85px);
-  position: relative;
-  padding-top: 15px;
-}
-
-#fileManager div.directory-viewer.grid p.empty,
-#fileManager div.directory-viewer.grid div.center-flex {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin: 0 !important;
-  padding: 25px;
-}
-
-#fileManager div.directory-viewer.grid button.header-row {
-  display: none;
-}
-
-#fileManager div.directory-viewer.grid button {
-  position: relative;
-  display: flex;
-  vertical-align: top;
-  flex-direction: column;
-  width: 80px !important;
-  height: fit-content;
-  margin: 0;
-  margin-bottom: 12px;
-  padding: 2px 5px;
-  border: none;
-  border-radius: 5px;
-  background-color: transparent;
-  min-height: 64px;
-}
-
-#fileManager div.directory-viewer.grid button div.segment.icon img {
-  width: 32px;
-  height: 32px;
-  margin: 0 8px;
-}
-
-#fileManager div.directory-viewer.grid button div.segment.icon {
-  width: unset;
-  height: 32px;
-}
-
-#fileManager
-  div.directory-viewer.grid
-  button
-  div.segment:not(.name):not(.icon) {
-  display: none;
-}
-
-#fileManager div.directory-viewer.grid button div.segment.name {
-  width: 100%;
-  text-align: center;
-  max-width: unset;
-  margin: 0;
-  height: fit-content;
-  max-height: 2.6em;
-  color: var(--fg);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: initial;
-  display: inline-block;
-}
-
-#fileManager div.directory-viewer button.renaming div.segment.name {
-  overflow: visible !important;
-  display: flex;
-  justify-content: center;
-}
-
-#fileManager div.directory-viewer.grid button.renaming div.segment.name form {
-  text-align: left;
-  width: fit-content;
-  overflow: visible;
-}
-
-#fileManager div.directory-viewer.grid button input {
-  left: -2px;
-  width: 84px;
-  text-align: center;
-  display: block;
-  margin: 0 auto;
-  margin-top: -1px;
-  position: absolute;
-  z-index: 1000;
-  overflow: hidden;
-}
-
-#fileManager div.directory-viewer button {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 5px;
-  margin: 0;
-  background-color: transparent;
-  transform: unset;
-  transition: opacity 0.3s;
-  scale: 1;
-}
-
-#fileManager div.directory-viewer button.hidden-file {
-  opacity: 0.6;
-}
-
-#fileManager div.directory-viewer button * {
-  transition: none !important;
-}
-
-#fileManager div.directory-viewer button div.segment {
-  position: relative;
-}
-
-#fileManager div.directory-viewer button.selected {
-  background-color: var(--accent-transparent) !important;
-}
-
-#fileManager div.directory-viewer button.cutting {
-  opacity: 0.5;
-}
-
-#fileManager div.directory-viewer button.copying {
-  font-weight: bold;
-}
-
-#fileManager div.directory-viewer button:hover {
-  background-color: var(--button-bg);
-}
-
-#fileManager div.directory-viewer button:active {
-  background-color: var(--button-active-bg);
-  box-shadow: none;
-}
-
-#fileManager div.directory-viewer button input {
-  padding: 0;
-  border: none;
-  background-color: var(--button-glass-active-bg);
-  font-size: var(--font-size);
-  box-shadow: none;
-  border: var(--button-hover-bg) 1px solid;
-  background-color: var(--button-bg);
-  margin-left: -1px;
-}
-
-#fileManager div.directory-viewer.compact {
-  gap: 2px;
-}
-
-#fileManager div.directory-viewer.compact button {
-  gap: 5px;
-}
-
-#fileManager div.directory-viewer.compact button div.segment.icon,
-#fileManager div.directory-viewer.compact button div.segment.icon img {
-  width: 16px;
-  height: 16px;
-}
-
-#fileManager div.directory-viewer p.empty {
-  text-align: center;
-  margin: 10px;
-  opacity: 0.5;
-  font-style: italic;
-  transition: color 0.3s !important;
-}
-
-#fileManager div.directory-viewer div.center-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-#fileManager div.directory-viewer {
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - 35px);
-  overflow-y: scroll;
-  padding: 15px;
-  padding-top: 0;
-  gap: 5px;
-  position: relative;
-}
-
-#fileManager div.directory-viewer button.header-row {
-  box-shadow: none;
-  opacity: 1;
-  padding: 0 5px;
-  font-weight: 900;
-  position: sticky;
-  top: 0;
-  background-color: var(--win-bg);
-  z-index: 100000;
-  padding-top: 15px;
-  padding-bottom: 5px;
-}
-
-#fileManager div.directory-viewer.loading {
-  justify-content: center;
-  align-items: center;
-}
-
-#fileManager > div.body > div.splash {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 150px 0;
-  padding-bottom: 100px;
-  flex-direction: column;
-}
-
-#fileManager > div.body > div.splash img {
-  height: 96px;
 }
 
 #fileManager > div.overlay-wrapper > div.window.overlay {
