--- a/src/css/apps/components/shell/pushnotification.css
+++ b/src/css/apps/components/shell/pushnotification.css
@@ -13,15 +13,15 @@ div.shell div.push-notification {
   border-radius: var(--win-border-rad);
   height: fit-content;
   overflow: hidden;
-  transition: opacity 0.3s, visibility 0.3s, translate 0.3s, pointer-events 0s;
+  transition: opacity 0.3s, visibility 0.3s,
+    translate 0.3s cubic-bezier(0.165, 0.84, 0.44, 1), pointer-events 0s;
   min-width: 250px;
   min-height: 100px;
 }
 
 div.shell div.push-notification:not(.show) {
-  opacity: 0;
   visibility: hidden;
-  translate: 50px 0;
+  translate: calc(100% + 20px) 0;
   pointer-events: none;
 }
 
