--- a/src/css/infoblock.css
+++ b/src/css/infoblock.css
@@ -4,6 +4,18 @@ div.window:not(.core) div.body div.info-block {
   box-shadow: var(--secondary-box-shadow);
 }
 
+div.window:not(.core) div.body div.info-block button {
+  background-color: var(--button-glass-bg);
+}
+
+div.window:not(.core) div.body div.info-block button:hover {
+  background-color: var(--button-glass-hover-bg);
+}
+
+div.window:not(.core) div.body div.info-block button:active {
+  background-color: var(--button-glass-active-bg);
+}
+
 div.window:not(.core) div.body div.info-block div.row {
   display: flex;
   gap: 30px;
@@ -55,6 +67,8 @@ div.window:not(.core) div.body div.info-block div.segment.right {
   justify-content: center;
   border-left: var(--win-border);
   padding-left: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 div.window:not(.core) div.body div.info-block div.segment code {
