--- a/src/css/window/button.css
+++ b/src/css/window/button.css
@@ -14,7 +14,7 @@ div.window div.body button:not(.reset):hover {
 }
 
 button:not(.reset):not(:disabled):active {
-  scale: 0.95;
+  /* scale: 0.95; */
   opacity: 0.8;
 }
 
