--- a/src/css/apps/components/shell/startmenu.css
+++ b/src/css/apps/components/shell/startmenu.css
@@ -7,13 +7,19 @@ div.shell div.startmenu {
   height: 490px;
   background-color: var(--glass-bg);
   border-radius: 10px;
-  transition: translate 0.3s, opacity 0.2s, pointer-events 0s, visibility 0.3s;
+  transition: translate 0.3s, opacity 0.2s, pointer-events 0s, visibility 0.3s,
+    width 0.3s, height 0.3s;
   z-index: 10;
   border: var(--border);
   max-height: 100%;
   backdrop-filter: blur(var(--blur));
   box-shadow: 0 5px 15px 5px #0003;
   padding: 10px;
+}
+
+div.shell div.startmenu.searching {
+  width: 530px;
+  height: 506px;
 }
 
 div.shell div.startmenu:not(.opened) {
