--- a/src/css/apps/components/shell/contextmenu.css
+++ b/src/css/apps/components/shell/contextmenu.css
@@ -2,7 +2,7 @@
 
 #arcShell div.context-menu,
 #arcShell div.context-menu div.sub-items {
-  position: absolute;
+  position: fixed;
   min-width: 180px;
   min-height: 42px;
   background-color: var(--glass-bg);
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   transform-origin: top center;
-  z-index: 100000000000000000000000000000000000000000000000000000000;
+  z-index: 100000000000000000000000000000000000000000000000000000000 !important;
   pointer-events: none !important;
   box-shadow: var(--secondary-box-shadow);
 }
