--- a/src/css/apps/user/mediaplayer.css
+++ b/src/css/apps/user/mediaplayer.css
@@ -1,7 +1,7 @@
-#MediaPlayer:not(.maximized) {
+/* #MediaPlayer:not(.maximized) {
   width: fit-content !important;
   height: fit-content !important;
-}
+} */
 
 #MediaPlayer > div.body {
   padding: 20px 30px;
@@ -49,9 +49,9 @@
 }
 
 #MediaPlayer > div.body div.controls button.stop {
-  width: 20px;
-  height: 20px;
-  font-size: 16px;
+  width: 26px;
+  height: 26px;
+  font-size: 14px;
 }
 #MediaPlayer > div.body div.controls div.group {
   display: flex;
