--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -47,3 +47,9 @@
   z-index: 10000;
   position: relative;
 }
+
+#appRenderer:has(div.workspace.selected div.window.fullscreen)
+  #arcShell
+  div.taskbar {
+  translate: 0 50px;
+}
