--- a/src/css/window.css
+++ b/src/css/window.css
@@ -44,6 +44,35 @@ div.window:not(.core).maximized {
   transition: all 0.3s;
 }
 
+div.window:not(.core).fullscreen {
+  top: 0 !important;
+  left: 0 !important;
+  width: 100vw !important;
+  min-width: 100vw !important;
+  max-width: 100vw !important;
+  height: 100vh !important;
+  min-height: 100vh !important;
+  max-height: 100vh !important;
+  translate: 0 0 !important;
+  transform: none !important;
+  border-radius: 0 !important;
+  resize: none !important;
+  border: none !important;
+  z-index: 1000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 !important;
+  background-color: var(--win-bg) !important;
+  backdrop-filter: none !important;
+}
+
+div.window:not(.core).fullscreen div.titlebar {
+  display: none !important;
+}
+
+div.window:not(.core).fullscreen > div.body {
+  height: 100vh !important;
+  border-top: none !important;
+  border-radius: 0 !important;
+}
+
 div.window:not(.core):not(.glass).focused {
   background-color: var(--glass-bg);
 }
