--- a/src/css/apps/components/wallpaper.css
+++ b/src/css/apps/components/wallpaper.css
@@ -2,6 +2,9 @@ div.window#wallpaper {
   z-index: 1000 !important;
   pointer-events: none !important;
 }
+div.window#wallpaper > div.body {
+  position: relative;
+}
 
 div.desktop-wallpaper {
   height: 100%;
@@ -18,4 +21,45 @@ div.desktop-wallpaper > div.wallpaper {
 
 div.desktop-wallpaper > div.wallpaper:not(.show) {
   opacity: 0;
+}
+
+#wallpaper div.desktop-icons {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - var(--taskbar-allocation));
+  z-index: 1000000000000000000000000000000;
+}
+
+#wallpaper div.desktop-icons button {
+  height: fit-content;
+  margin: 0;
+  margin-bottom: 12px;
+  border: none;
+  background-color: transparent;
+  vertical-align: top;
+  padding: 2px 5px;
+  border-radius: 5px;
+  transition: all 0.3s, transform 0s, background-color 0s;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 80px !important;
+  text-align: center;
+  pointer-events: initial !important;
+}
+
+#wallpaper div.desktop-icons button p {
+  margin: 0;
+  height: fit-content;
+  max-height: 2.6em;
+  text-shadow: #000 0 0 5px;
+  color: white;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#wallpaper div.desktop-icons button img {
+  height: 32px;
 }
