--- a/src/css/apps/components/wallpaper.css
+++ b/src/css/apps/components/wallpaper.css
@@ -32,6 +32,7 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   z-index: 1000000000000000000000000000000;
 }
 
+#wallpaper div.desktop-icons div.ghost,
 #wallpaper div.desktop-icons button {
   height: fit-content;
   margin: 0;
@@ -41,13 +42,49 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   vertical-align: top;
   padding: 2px 5px;
   border-radius: 5px;
-  transition: all 0.3s, transform 0s, background-color 0s;
+  /* transition: all 0.3s, top 0s, left 0s, translate 0s, transform 0s,
+    background-color 0s; */
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 0;
+  left: 0;
   width: 80px !important;
   text-align: center;
   pointer-events: initial !important;
+  translate: none !important;
+}
+
+#wallpaper div.desktop-icons div.ghost {
+  display: none;
+  background-color: #fff2;
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+#wallpaper div.desktop-icons div.ghost.moving {
+  display: block;
+  top: var(--top);
+  left: var(--left);
+}
+
+#wallpaper div.desktop-icons div.img {
+  position: relative;
+  width: 32px;
+  margin: 0 auto;
+  height: 32px;
+}
+
+#wallpaper div.desktop-icons div.img span {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  color: #000;
+  font-size: 12px;
+  width: 12px;
+  height: 12px;
+  text-align: center;
+  border-radius: 2px;
+  line-height: 12px;
 }
 
 #wallpaper div.desktop-icons button p {
@@ -60,6 +97,29 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   text-overflow: ellipsis;
 }
 
-#wallpaper div.desktop-icons button img {
+#wallpaper div.desktop-icons img {
   height: 32px;
+}
+
+#wallpaper div.desktop-icons button:hover {
+  background-color: #fff2;
+}
+
+#wallpaper div.desktop-icons button.selected {
+  background-color: var(--accent-transparent);
+}
+
+#wallpaper div.desktop-icons button.moving {
+  transition: none !important;
+  pointer-events: none;
+  background-color: var(--accent-transparent);
+  opacity: 0.5;
+}
+
+#wallpaper div.desktop-icons button.moving * {
+  opacity: 0;
+}
+
+#wallpaper div.desktop-icons button.moving.no-grid {
+  opacity: 0;
 }
