--- a/src/css/state/crash.css
+++ b/src/css/state/crash.css
@@ -1,14 +1,13 @@
 .crash-screen {
   background-color: #000;
-  font-family: "unifont";
 
   opacity: 0;
   animation: crash-show 0s linear forwards;
   animation-delay: 1s;
   transition: none !important;
-  font-size: 16px;
 }
 
+.crash-screen #crashScreen,
 .crash-screen p#crashText {
   position: fixed;
   top: 0;
@@ -16,8 +15,58 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+
+.crash-screen #crashText {
   white-space: pre-wrap;
   overflow-y: scroll;
+  padding: 10px;
+  font-size: 13 px;
+  font-family: "Source Code Pro";
+}
+
+.crash-screen #crashScreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #000;
+}
+
+.crash-screen #crashScreen.hidden {
+  display: none;
+}
+
+.crash-screen #crashScreen > span {
+  font-size: 96px;
+  opacity: 0.5;
+  margin-bottom: 25px;
+}
+
+.crash-screen #crashScreen > h1 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.crash-screen #crashScreen > p {
+  max-width: 360px;
+  text-align: center;
+}
+
+.crash-screen #crashScreen > div.shortcut-hint {
+  position: fixed;
+  bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  font-size: 14px;
+  opacity: 0.5;
+}
+
+.crash-screen #crashScreen > div.shortcut-hint span.lucide {
+  font-size: 16px;
 }
 
 @keyframes crash-show {
