--- a/src/css/state/crash.css
+++ b/src/css/state/crash.css
@@ -17,11 +17,11 @@
   overflow: hidden;
 }
 
-.crash-screen #crashText {
+.crash-screen p#crashText {
   white-space: pre-wrap;
   overflow-y: scroll;
   padding: 10px;
-  font-size: 13 px;
+  font-size: 13px;
   font-family: "Source Code Pro";
 }
 
@@ -67,6 +67,7 @@
 
 .crash-screen #crashScreen > div.shortcut-hint span.lucide {
   font-size: 16px;
+  height: 16px;
 }
 
 @keyframes crash-show {
