--- a/src/css/apps/components/shell/contextmenu.css
+++ b/src/css/apps/components/shell/contextmenu.css
@@ -134,9 +134,18 @@
 
 #arcShell div.context-menu span.has-subitems,
 #arcShell div.context-menu span.is-active {
-  opacity: 0.5;
+  opacity: 0;
   margin-left: auto;
   font-size: 16px;
+  width: 16px;
+}
+
+#arcShell div.context-menu span.has-subitems {
+  opacity: 0.5;
+}
+
+#arcShell div.context-menu span.is-active.show {
+  opacity: 0.5;
 }
 
 #arcShell div.context-menu span.is-active + span.has-subitems {
