--- a/src/css/apps/components/wallpaper.css
+++ b/src/css/apps/components/wallpaper.css
@@ -17,6 +17,7 @@ div.desktop-wallpaper > div.wallpaper {
   height: 100%;
   transition: background-image 0.3s;
   opacity: 1;
+  pointer-events: all;
 }
 
 div.desktop-wallpaper > div.wallpaper:not(.show) {
